--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "semantic-release": "^15.10.5",
         "ts-jest": "^26.4.4",
         "ts-node": ">=9.0.0",
-        "typescript": "^4.1.3"
+        "typescript": "^4.1.3",
+        "vague-time": "^2.4.2"
     },
     "repository": {
         "type": "git",
