--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "jest-circus": "^26.6.3",
         "prettier": "^2.1.2",
         "semantic-release": "^15.10.5",
+        "slugify": "^1.4.6",
         "ts-jest": "^26.4.4",
         "ts-node": ">=9.0.0",
         "typescript": "^4.1.3",
