docs: updates on workflows
Added information on documentation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -108,5 +108,9 @@
         "node": true,
         "es6": true,
         "jest/globals": true
+    },
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
     }
 }
