--- a/.github/workflows/version-update.yml
+++ b/.github/workflows/version-update.yml
@@ -17,7 +17,9 @@ jobs:
           fetch-depth: 0
 
       - name: Edit version.txt
-        run: echo "VERSION = \"$(git describe --tags `git rev-list --tags --max-count=1`)\"" > version.txt
+        run: |
+          echo "BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" > version.txt
+          echo "VERSION = \"$(git describe --tags `git rev-list --tags --max-count=1`)\"" >> version.txt
 
       - name: Commit update
         uses: stefanzweifel/git-auto-commit-action@v4
