docs: updates on workflows
Added information on documentation

--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -11,6 +11,7 @@ bracketSpacing: true
 jsxBracketSameLine: true
 arrowParens: 'avoid'
 proseWrap: 'always'
+parser: typescript
 overrides:
   - files: '*.test.js'
     options:
