--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "prettier": "^2.1.2",
-        "semantic-release": "^15.10.5",
+        "semantic-release": ">=17.2.3",
         "slugify": "^1.4.6",
         "ts-jest": "^26.4.4",
         "ts-node": ">=9.0.0",
