docs: updates on workflows
Added information on documentation

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,5 +1,5 @@
 {
-  "projectName": "justory",
+  "projectName": "typescript-tools",
   "projectOwner": "AlexRogalskiy",
   "repoType": "github",
   "repoHost": "https://github.com",
