--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,8 +1,8 @@
 # Repository settings set via https://github.com/probot/settings
 ---
 repository:
-  description: "justory"
-  homepage: https://github.com/AlexRogalskiy/justory
+  description: "typescript-tools"
+  homepage: https://github.com/AlexRogalskiy/typescript-tools
   topics: web, documents, visualization
   private: false
   has_issues: true
