docs: updates on workflows
Added information on documentation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,8 @@
         "strictNullChecks": true,
         "strictFunctionTypes": false,
         "noEmitOnError": true,
-        "preserveConstEnums": true
+        "preserveConstEnums": true,
+        "strictPropertyInitialization": true
     },
     "exclude": [
         "node_modules",
