--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "test:folio": "folio tests/spec/",
         "test": "TZ=utc jest",
         "test:coverage": "jest --collectCoverage",
-        "test:watch": "jest --watch"
+        "test:watch": "jest --watch",
+        "all": "npm run format && npm run lint"
     },
     "dependencies": {
         "isomorphic-unfetch": "^3.1.0",
@@ -38,15 +39,17 @@
         "eslint-plugin-jest": "^23.20.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^3.1.4",
+        "folio": "^0.3.18",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "prettier": "^2.1.2",
         "semantic-release": ">=17.2.3",
-        "folio": "^0.3.18",
         "slugify": "^1.4.6",
         "ts-jest": "^26.4.4",
         "ts-node": ">=9.0.0",
+        "tsdx": "^0.14.1",
         "typescript": "^4.1.3",
+        "utility-types": "^3.10.0",
         "vague-time": "^2.4.2"
     },
     "repository": {
@@ -63,8 +66,21 @@
         "typescript",
         "utilities"
     ],
+    "contributors": [
+        {
+            "name": "Alexander Rogalskiy",
+            "email": "hi@nullables.io"
+        }
+    ],
     "release": {
         "tagFormat": "v${version}",
+        "branches": [
+            "master",
+            {
+                "name": "develop",
+                "prerelease": true
+            }
+        ],
         "plugins": [
             "@semantic-release/release-notes-generator",
             [
