--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
         "reinstall": "del-cli ./node_modules ./package-lock.json ./yarn.lock",
         "postreinstall": "yarn setup",
         "setup": "yarn",
+        "build": "tsdx build",
+        "watch": "tsdx watch",
+        "lint:report": "tsdx lint src --report-file report.json",
         "semantic-release": "semantic-release",
         "test:folio": "folio tests/spec/",
         "test": "TZ=utc jest",
