--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.0.0-dev",
     "description": "Collection of TypeScript tools & utilities",
     "license": "GPL-3.0",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "scripts": {
         "format": "prettier --write \"./src/**/*.ts\"",
         "format:check": "prettier --check \"./src/**/*.ts\"",
@@ -34,7 +36,7 @@
         "@types/prettier": "^2.1.5",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
-        "del-cli": "3.0.0",
+        "del-cli": "^3.0.1",
         "eslint": "^7.18.0",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-github": "^4.1.1",
@@ -52,6 +54,7 @@
         "ts-node": ">=9.0.0",
         "tsdx": "^0.14.1",
         "typescript": "^4.1.3",
+        "typescript-object-utils": "^0.4.1",
         "utility-types": "^3.10.0",
         "vague-time": "^2.4.2"
     },
