docs: updates on workflows
Added information on documentation

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -110,7 +110,8 @@
     "env": {
         "node": true,
         "es6": true,
-        "jest/globals": true
+        "jest/globals": true,
+        "browser": true
     },
     "globals": {
         "Atomics": "readonly",
