docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -72,6 +72,12 @@
         "typescript",
         "utilities"
     ],
+    "maintainers": [
+        {
+            "name": "Alexander Rogalskiy",
+            "email": "hi@nullables.io"
+        }
+    ],
     "contributors": [
         {
             "name": "Alexander Rogalskiy",
