--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
         "ts-jest": "^26.4.4",
         "ts-node": ">=9.0.0",
         "tsdx": "^0.14.1",
+        "typed-rest-client": "^1.8.1",
         "typescript": "^4.1.3",
         "typescript-object-utils": "^0.4.1",
         "utility-types": "^3.10.0",
-        "vague-time": "^2.4.2"
+        "vague-time": "^2.4.2",
+        "ws": "^7.4.3"
     },
     "repository": {
         "type": "git",
