--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@types/prettier": "^2.1.5",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
+        "axios": "^0.21.1",
         "del-cli": "^3.0.1",
         "eslint": "^7.18.0",
         "eslint-config-prettier": "^6.15.0",
@@ -44,6 +45,8 @@
         "eslint-plugin-jest": "^23.20.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^3.1.4",
+        "remark-cli": "^9.0.0",
+        "remark-validate-links": "^10.0.2",
         "folio": "^0.3.18",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
