docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
         "axios": "^0.21.1",
+        "dateformat": "^4.5.1",
         "del-cli": "^3.0.1",
         "eslint": "^7.18.0",
         "eslint-config-prettier": "^6.15.0",
@@ -45,12 +46,12 @@
         "eslint-plugin-jest": "^23.20.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^3.1.4",
-        "remark-cli": "^9.0.0",
-        "remark-validate-links": "^10.0.2",
         "folio": "^0.3.18",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "prettier": "^2.1.2",
+        "remark-cli": "^9.0.0",
+        "remark-validate-links": "^10.0.2",
         "semantic-release": ">=17.2.3",
         "slugify": "^1.4.6",
         "ts-jest": "^26.4.4",
