docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "format": "prettier --write \"./src/**/*.ts\"",
-        "format:check": "prettier --check \"./src/**/*.ts\"",
+        "format": "prettier --write \"./src/**/*.ts\" \"./tools/**/*.ts\"",
+        "format:check": "prettier --check \"./src/**/*.ts\" \"./tools/**/*.ts\"",
         "postpublish": "npm run clean",
         "lint": "eslint --cache --fix --quiet --format codeframe --ext js,ts .",
         "reinstall": "del-cli ./node_modules ./package-lock.json ./yarn.lock",
@@ -15,7 +15,7 @@
         "setup": "yarn",
         "build": "tsdx build",
         "watch": "tsdx watch",
-        "lint:report": "tsdx lint src --report-file report.json",
+        "lint:report": "tsdx lint src tools --report-file report.json",
         "semantic-release": "semantic-release",
         "test:folio": "folio tests/spec/",
         "test": "TZ=utc jest",
