docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "reinstall": "del-cli ./node_modules ./package-lock.json ./yarn.lock",
         "postreinstall": "yarn setup",
         "setup": "yarn",
+        "prebuild": "rimraf dist",
         "build": "tsdx build",
         "watch": "tsdx watch",
         "lint:report": "tsdx lint src tools --report-file report.json",
@@ -36,6 +37,7 @@
         "@types/prettier": "^2.1.5",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
+        "rimraf": "^3.0.2",
         "axios": "^0.21.1",
         "dateformat": "^4.5.1",
         "del-cli": "^3.0.1",
