--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "reinstall": "del-cli ./node_modules ./package-lock.json ./yarn.lock",
         "postreinstall": "yarn setup",
         "setup": "yarn",
-        "prebuild": "rimraf dist",
+        "prebuild": "rimraf dist coverage",
         "build": "tsdx build",
         "watch": "tsdx watch",
         "lint:report": "tsdx lint src tools --report-file report.json",
@@ -37,7 +37,6 @@
         "@types/prettier": "^2.1.5",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
-        "rimraf": "^3.0.2",
         "axios": "^0.21.1",
         "dateformat": "^4.5.1",
         "del-cli": "^3.0.1",
@@ -54,6 +53,7 @@
         "prettier": "^2.1.2",
         "remark-cli": "^9.0.0",
         "remark-validate-links": "^10.0.2",
+        "rimraf": "^3.0.2",
         "semantic-release": ">=17.2.3",
         "slugify": "^1.4.6",
         "ts-jest": "^26.4.4",
