--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "experimentalDecorators": true,
         "removeComments": false,
         "allowSyntheticDefaultImports": true,
+        "downlevelIteration": true,
         "lib": [
             "esnext",
             "dom"
@@ -26,8 +27,9 @@
             "node_modules/@types",
             "./typings"
         ],
-        "target": "ES2019",
-        "module": "ESNext",
+        "target": "ES2020",
+        "module": "ES2020",
+        "importsNotUsedAsValues": "preserve",
         "resolveJsonModule": true,
         "moduleResolution": "node",
         "sourceMap": false,
@@ -50,7 +52,9 @@
         "node_modules",
         "**/*.test.ts",
         "**/*.test.js",
-        "tmp"
+        "tmp",
+        "dist",
+        "docs"
     ],
     "files": [
         "./src/index.ts"
