--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,8 @@
             "node_modules/@types",
             "./typings"
         ],
-        "target": "ES2020",
-        "module": "ES2020",
+        "target": "ESNext",
+        "module": "ESNext",
         "importsNotUsedAsValues": "preserve",
         "resolveJsonModule": true,
         "moduleResolution": "node",
