--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "folio": "^0.3.18",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
+        "object-hash": "^2.1.1",
         "prettier": "^2.1.2",
         "remark-cli": "^9.0.0",
         "remark-validate-links": "^10.0.2",
