--- a/.github/workflows/codespell.yaml
+++ b/.github/workflows/codespell.yaml
@@ -20,6 +20,6 @@ jobs:
         uses: codespell-project/actions-codespell@master
         with:
           skip: .git,*.png,*.jpg,*.svg,*.sum,*.json,*.lock
-          ignore_words_list: aks,keyserver,atleast,dne,ser,ist,files',ba,dum,iam,te,parm,bumb,nd,sie
+          ignore_words_list: aks,keyserver,atleast,dne,ser,ist,files',ba,dum,iam,te,parm,bumb,nd,sie,GIR,afterAll
           check_filenames: true
           check_hidden: true
