--- a/package.json
+++ b/package.json
@@ -41,8 +41,6 @@
         "@typescript-eslint/parser": "^4.15.0",
         "axios": "^0.21.1",
         "dateformat": "^4.5.1",
-        "randomcolor": "^0.5.4",
-        "gradient-string": "^1.2.0",
         "del-cli": "^3.0.1",
         "eslint": "^7.18.0",
         "eslint-config-prettier": "^6.15.0",
@@ -53,10 +51,14 @@
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-spellcheck": "0.0.8",
         "folio": "^0.3.18",
+        "gradient-string": "^1.2.0",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
+        "jsdom": "16.4.0",
+        "jsdom-global": "3.0.2",
         "object-hash": "^2.1.1",
         "prettier": "^2.1.2",
+        "randomcolor": "^0.5.4",
         "remark-cli": "^9.0.0",
         "remark-validate-links": "^10.0.2",
         "rimraf": "^3.0.2",
