--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,16 +3,31 @@ version: 1.0.{build}
 
 # Test against the latest version of this Node.js version
 environment:
-  nodejs_version: "8"
+  matrix:
+    - nodejs_version: '12.16.0'
+    - nodejs_version: '8'
 
-platform: x64
+platform:
+  - x64
+
+image: Visual Studio 2019
+
+init:
+  - git config --global core.autocrlf input
 
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version $env:Platform
+  - git reset --hard HEAD
   # install modules
   - npm install
+
+matrix:
+  fast_finish: true
+
+skip_commits:
+  message: /\[ci\s+skip\]/
 
 # Post-install test scripts.
 test_script:
@@ -24,3 +39,6 @@ test_script:
 
 # Don't actually build.
 build: off
+
+cache:
+  - '%APPDATA%\npm-cache'
