--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "install-peers": "npm ls 2>/dev/null | grep \"UNMET PEER DEPENDENCY\" | awk '{print $NF}' | xargs npm install -D",
-        "format": "prettier --write \"./src/**/*.ts\" \"./tools/**/*.ts\"",
+        "format": "prettier --single-quote --write \"./src/**/*.ts\" \"./tools/**/*.ts\"",
         "format:check": "prettier --check \"./src/**/*.ts\" \"./tools/**/*.ts\"",
         "postpublish": "npm run clean",
         "lint": "eslint --cache --fix --quiet --format codeframe --ext js,ts .",
