docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-        "install-peers": "npm ls 2>/dev/null | grep \"UNMET PEER DEPENDENCY\" | awk '{print $NF}' | xargs npm install -D",
         "format": "prettier --single-quote --write \"./src/**/*.ts\" \"./tools/**/*.ts\"",
         "format:check": "prettier --check \"./src/**/*.ts\" \"./tools/**/*.ts\"",
-        "postpublish": "npm run clean",
-        "lint": "eslint --cache --fix --quiet --format codeframe --ext js,ts .",
-        "reinstall": "del-cli ./node_modules ./package-lock.json ./yarn.lock",
+        "install-peers": "npm ls 2>/dev/null | grep \"UNMET PEER DEPENDENCY\" | awk '{print $NF}' | xargs npm install -D",
         "postreinstall": "yarn setup",
         "setup": "yarn",
         "yarn:import": "rm -rf ./yarn.lock && yarn import",
+        "postpublish": "npm run clean",
         "prebuild": "rimraf dist coverage",
         "build": "tsdx build",
         "watch": "tsdx watch",
+        "reinstall": "del-cli ./node_modules ./package-lock.json ./yarn.lock",
+        "version": "git add -A dist",
+        "postversion": "git push && git push --tags",
+        "lint": "eslint --cache --fix --quiet --format codeframe --ext js,ts .",
         "lint:report": "tsdx lint src tools --report-file report.json",
         "semantic-release": "semantic-release",
         "test:folio": "folio tests/spec/",
@@ -31,6 +33,7 @@
         "lodash": "^4.17.20"
     },
     "devDependencies": {
+        "@arkweid/lefthook": "^0.7.2",
         "@semantic-release/github": "^7.2.0",
         "@semantic-release/npm": "^7.0.10",
         "@semantic-release/release-notes-generator": "^9.0.1",
