--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# Hook configuration files
+lefthook-local.yml
+
 # Build and temp folders
 .settings/
 .idea/
