docs: updates on workflows
Added information on documentation

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,7 +4,7 @@ pre-commit:
     prettier:
       files: git diff --name-only @{push}
       glob: "*.{js,ts}"
-      run: npx prettier --single-quote --write
+      run: npx prettier --single-quote --write {files}
     linter:
       files: git diff --name-only @{push}
       glob: "*.{js,ts}"
