--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "test": "TZ=utc jest",
         "test:coverage": "jest --collectCoverage --detectOpenHandles",
         "test:watch": "jest --watch",
+        "test:all": "npm run test && npm run test:folio",
         "all": "npm run format && npm run lint && npm run build"
     },
     "dependencies": {
