--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,9 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# Hook configuration files
+# Configuration files
 lefthook-local.yml
+yaspeller_report.html
 
 # Build and temp folders
 .settings/
