--- a/package.json
+++ b/package.json
@@ -11,34 +11,43 @@
         "install-peers": "npm ls 2>/dev/null | grep \"UNMET PEER DEPENDENCY\" | awk '{print $NF}' | xargs npm install -D",
         "postreinstall": "yarn setup",
         "setup": "yarn",
-        "yarn:import": "rm -rf ./yarn.lock && yarn import",
+        "yarn:import": "del-cli --dot=true ./yarn.lock && yarn import",
+        "prepublishOnly": "npm run check:all && npm run build",
         "postpublish": "npm run clean",
         "prebuild": "rimraf dist coverage",
         "build": "tsdx build",
         "watch": "tsdx watch",
-        "reinstall": "del-cli ./node_modules ./package-lock.json ./yarn.lock",
+        "clean": "del-cli --dot=true \"./dist/**/*\"",
+        "reinstall": "del-cli --dot=true ./node_modules ./package-lock.json ./yarn.lock",
         "version": "git add -A dist",
         "postversion": "git push && git push --tags",
         "yaspeller": "yaspeller .",
-        "markdown": "markdown-link-check ./README.md ./SECURITY.md",
+        "markdown:check": "markdown-link-check ./README.md ./SECURITY.md",
         "lint": "eslint --cache --fix --quiet --format codeframe --ext js,ts .",
         "lint:report": "tsdx lint src tools --report-file report.json",
         "license:badge": "license-badger --corrections --uncategorizedLicenseTemplate \"\\${license} (\\${name} (\\${version}))\" --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(project, deps, and bundled devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --packageJson --production -l licenseInfo.json ./badges/licenses-badge.svg",
         "license:badge-dev": "license-badger --corrections --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(all devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --allDevelopment -l licenseInfo.json ./badges/licenses-badge-dev.svg",
         "license:badges": "npm run license:badge && npm run license:badge-dev",
+        "pretty": "pretty-quick --staged --pattern '!test/tests/lint/**'",
         "remark": "remark -q -f .",
+        "lint:md": "remark-preset-davidtheclark",
+        "format:md": "remark-preset-davidtheclark --format",
         "docs": "typedoc --out docs/ts src tools --excludeExternals --tsconfig tsconfig.json",
         "semantic-release": "semantic-release",
-        "test:folio": "folio tests/spec/",
-        "test": "TZ=utc jest",
-        "test:coverage": "jest --collectCoverage --detectOpenHandles",
-        "test:watch": "jest --watch",
+        "test:folio": "env-cmd --silent -e test folio tests/spec/",
+        "test": "env-cmd --silent -e test jest",
+        "test:coverage": "env-cmd --silent -e test jest --collectCoverage --detectOpenHandles",
+        "test:watch": "env-cmd --silent -e test jest --watch",
+        "lint:all": "npm run lint && npm run lint:md",
+        "format:all": "npm run format && npm run format:md",
+        "check:all": "npm run format:check",
         "test:all": "npm run test && npm run test:folio",
-        "all": "npm run format && npm run lint && npm run build"
+        "all": "npm run format:all && npm run lint:all && npm run pretty && npm run build"
     },
     "dependencies": {
         "isomorphic-unfetch": "^3.1.0",
-        "lodash": "^4.17.20"
+        "lodash": "^4.17.20",
+        "env-cmd": "^10.1.0"
     },
     "devDependencies": {
         "@arkweid/lefthook": "^0.7.2",
@@ -66,12 +75,17 @@
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-spellcheck": "0.0.8",
         "folio": "^0.3.18",
+        "yaml": "^1.10.0",
+        "import-fresh": "^3.2.1",
+        "parse-json": "^5.0.0",
+        "path-type": "^4.0.0",
         "gradient-string": "^1.2.0",
         "license-badger": "^0.18.0",
         "remark-cli": "^9.0.0",
         "remark-validate-links": "^10.0.2",
         "remark-lint-code-block-style": "^2.0.1",
         "remark-lint-ordered-list-marker-value": "^2.0.1",
+        "remark-preset-davidtheclark": "^0.12.0",
         "typedoc": "^0.20.28",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
@@ -80,6 +94,7 @@
         "markdown-link-check": "^3.8.6",
         "object-hash": "^2.1.1",
         "prettier": "^2.1.2",
+        "pretty-quick": "^3.1.0",
         "randomcolor": "^0.5.4",
         "rimraf": "^3.0.2",
         "slugify": "^1.4.6",
