docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -59,6 +59,9 @@
         "@types/prettier": "^2.1.5",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
+        "@types/d3-array": "^1.2.1",
+        "@types/d3-scale": "^2.0.0",
+        "@types/d3-shape": "^1.2.2",
         "axios": "^0.21.1",
         "crypto": "^1.0.1",
         "dateformat": "^4.5.1",
@@ -88,6 +91,9 @@
         "path-type": "^4.0.0",
         "prettier": "^2.1.2",
         "pretty-quick": "^3.1.0",
+        "d3-array": "^1.2.1",
+        "d3-scale": "^2.0.0",
+        "d3-shape": "^1.2.0",
         "randomcolor": "^0.5.4",
         "remark-cli": "^9.0.0",
         "remark-lint-code-block-style": "^2.0.1",
