--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
         "axios": "^0.21.1",
         "crypto": "^1.0.1",
         "dateformat": "^4.5.1",
+        "date-fns": "^2.16.1",
+        "ow": "^0.13.2",
         "dayjs": "^1.10.4",
         "dayjs-precise-range": "^1.0.1",
         "del-cli": "^3.0.1",
@@ -80,6 +82,7 @@
         "is-regex": "^1.0.5",
         "gradient-string": "^1.2.0",
         "import-fresh": "^3.2.1",
+        "styled-components": "^4.3.2",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "jsdom": "16.4.0",
