--- a/lefthook-local.yml
+++ b/lefthook-local.yml
@@ -1,3 +1,12 @@
+pre-commit:
+  commands:
+    prettier:
+      skip: true
+    linter:
+      skip: true
+    tests:
+      skip: true
+
 pre-push:
   commands:
     packages-audit:
