--- a/package.json
+++ b/package.json
@@ -54,19 +54,22 @@
         "@semantic-release/github": "^7.2.0",
         "@semantic-release/npm": "^7.0.10",
         "@semantic-release/release-notes-generator": "^9.0.1",
+        "@types/d3-array": "^1.2.1",
+        "@types/d3-scale": "^2.0.0",
+        "@types/d3-shape": "^1.2.2",
         "@types/jest": "^26.0.20",
         "@types/lodash.mergewith": "^4.6.6",
         "@types/prettier": "^2.1.5",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
-        "@types/d3-array": "^1.2.1",
-        "@types/d3-scale": "^2.0.0",
-        "@types/d3-shape": "^1.2.2",
         "axios": "^0.21.1",
+        "canvas": "^2.7.0",
         "crypto": "^1.0.1",
-        "dateformat": "^4.5.1",
+        "d3-array": "^1.2.1",
+        "d3-scale": "^2.0.0",
+        "d3-shape": "^1.2.0",
         "date-fns": "^2.16.1",
-        "ow": "^0.13.2",
+        "dateformat": "^4.5.1",
         "dayjs": "^1.10.4",
         "dayjs-precise-range": "^1.0.1",
         "del-cli": "^3.0.1",
@@ -79,10 +82,9 @@
         "eslint-plugin-prettier": "^3.1.4",
         "eslint-plugin-spellcheck": "0.0.8",
         "folio": "^0.3.18",
-        "is-regex": "^1.0.5",
         "gradient-string": "^1.2.0",
         "import-fresh": "^3.2.1",
-        "styled-components": "^4.3.2",
+        "is-regex": "^1.0.5",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "jsdom": "16.4.0",
@@ -90,13 +92,11 @@
         "license-badger": "^0.18.0",
         "markdown-link-check": "^3.8.6",
         "object-hash": "^2.1.1",
+        "ow": "^0.13.2",
         "parse-json": "^5.0.0",
         "path-type": "^4.0.0",
         "prettier": "^2.1.2",
         "pretty-quick": "^3.1.0",
-        "d3-array": "^1.2.1",
-        "d3-scale": "^2.0.0",
-        "d3-shape": "^1.2.0",
         "randomcolor": "^0.5.4",
         "remark-cli": "^9.0.0",
         "remark-lint-code-block-style": "^2.0.1",
@@ -106,6 +106,7 @@
         "rimraf": "^3.0.2",
         "semantic-release": ">=17.2.3",
         "slugify": "^1.4.6",
+        "styled-components": "^4.3.2",
         "ts-jest": "^26.4.4",
         "ts-node": ">=9.0.0",
         "tsdx": "^0.14.1",
