docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "yaspeller": "yaspeller .",
         "markdown:check": "markdown-link-check ./README.md ./SECURITY.md",
         "lint": "eslint --cache --fix --quiet --format codeframe --ext js,ts .",
+        "lint:clean": "rimraf .eslintcache",
         "lint:report": "tsdx lint src tools --report-file report.json",
         "license:badge": "license-badger --corrections --uncategorizedLicenseTemplate \"\\${license} (\\${name} (\\${version}))\" --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(project, deps, and bundled devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --packageJson --production -l licenseInfo.json ./badges/licenses-badge.svg",
         "license:badge-dev": "license-badger --corrections --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(all devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --allDevelopment -l licenseInfo.json ./badges/licenses-badge-dev.svg",
@@ -38,7 +39,7 @@
         "test": "env-cmd --silent -e test jest",
         "test:coverage": "env-cmd --silent -e test jest --collectCoverage --detectOpenHandles",
         "test:watch": "env-cmd --silent -e test jest --watch",
-        "lint:all": "npm run lint && npm run lint:md",
+        "lint:all": "npm run lint:clean && npm run lint && npm run lint:md",
         "format:all": "npm run format && npm run format:md",
         "check:all": "npm run format:check",
         "test:all": "npm run test && npm run test:folio",
