docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
         "postversion": "git push && git push --tags",
         "yaspeller": "yaspeller .",
         "markdown:check": "markdown-link-check ./README.md ./SECURITY.md",
-        "lint": "eslint --cache --fix --quiet --format codeframe --ext js,ts .",
+        "lint": "eslint --cache --fix --quiet --cache-location ./node_modules/.cache/ --format codeframe --ext js,ts .",
         "lint:clean": "rimraf .eslintcache",
         "lint:report": "tsdx lint src tools --report-file report.json",
         "license:badge": "license-badger --corrections --uncategorizedLicenseTemplate \"\\${license} (\\${name} (\\${version}))\" --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(project, deps, and bundled devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --packageJson --production -l licenseInfo.json ./badges/licenses-badge.svg",
         "license:badge-dev": "license-badger --corrections --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(all devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --allDevelopment -l licenseInfo.json ./badges/licenses-badge-dev.svg",
         "license:badges": "npm run license:badge && npm run license:badge-dev",
         "pretty": "pretty-quick --staged --pattern '!test/tests/lint/**'",
+        "license": "license-checker --json > licenses.json",
+        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
         "remark": "remark -q -f .",
         "lint:md": "remark-preset-davidtheclark",
         "format:md": "remark-preset-davidtheclark --format",
@@ -39,10 +41,11 @@
         "test": "env-cmd --silent -e test jest",
         "test:coverage": "env-cmd --silent -e test jest --collectCoverage --detectOpenHandles",
         "test:watch": "env-cmd --silent -e test jest --watch",
+        "test:license": "license-checker --production --summary --unknown --onlyAllow=\"Apache-2.0;BSD;ISC;MIT;UNLICENSED;\"",
         "lint:all": "npm run lint:clean && npm run lint && npm run lint:md",
         "format:all": "npm run format && npm run format:md",
         "check:all": "npm run format:check",
-        "test:all": "npm run test && npm run test:folio",
+        "test:all": "npm run test && npm run test:folio && npm run test:license",
         "all": "npm run format:all && npm run lint:all && npm run pretty && npm run build"
     },
     "dependencies": {
@@ -92,6 +95,7 @@
         "jsdom-global": "3.0.2",
         "license-badger": "^0.18.0",
         "markdown-link-check": "^3.8.6",
+        "license-checker": "^25.0.1",
         "object-hash": "^2.1.1",
         "ow": "^0.13.2",
         "parse-json": "^5.0.0",
@@ -104,6 +108,7 @@
         "remark-lint-ordered-list-marker-value": "^2.0.1",
         "remark-preset-davidtheclark": "^0.12.0",
         "remark-validate-links": "^10.0.2",
+        "conventional-changelog-cli": "^2.0.0",
         "rimraf": "^3.0.2",
         "semantic-release": ">=17.2.3",
         "slugify": "^1.4.6",
