--- a/.gitignore
+++ b/.gitignore
@@ -17,12 +17,11 @@
 *.rar
 **/.DS_Store
 
+# License files
+licenses.json
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-
-# Configuration files
-lefthook-local.yml
-yaspeller_report.html
 
 # Build and temp folders
 .settings/
@@ -30,12 +29,14 @@ yaspeller_report.html
 .reporting/
 bin/
 tmp/
+dist/
 build/*
 packages/
 coverage/
+test-results/
 target/
 log/
 site/
-dist/
 .cache
 node_modules
+.vercel
