docs: updates on workflows
Added information on documentation

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "yarn:import": "del-cli --dot=true ./yarn.lock && yarn import",
         "prepublishOnly": "npm run check:all && npm run build",
         "postpublish": "npm run clean",
-        "prebuild": "rimraf dist coverage",
+        "prebuild": "del-cli dist coverage",
         "build": "tsdx build",
         "watch": "tsdx watch",
         "clean": "del-cli --dot=true \"./dist/**/*\"",
@@ -24,7 +24,7 @@
         "yaspeller": "yaspeller .",
         "markdown:check": "markdown-link-check ./README.md ./SECURITY.md",
         "lint": "eslint --cache --fix --quiet --cache-location ./node_modules/.cache/ --format codeframe --ext js,ts .",
-        "lint:clean": "rimraf .eslintcache",
+        "lint:clean": "del-cli .eslintcache",
         "lint:report": "tsdx lint src tools --report-file report.json",
         "license:badge": "license-badger --corrections --uncategorizedLicenseTemplate \"\\${license} (\\${name} (\\${version}))\" --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(project, deps, and bundled devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --packageJson --production -l licenseInfo.json ./badges/licenses-badge.svg",
         "license:badge-dev": "license-badger --corrections --filteredTypes=weaklyProtective,protective --textTemplate \"License types\n(all devDeps)\" --licenseTypeColor networkProtective=blue,s{white} --allDevelopment -l licenseInfo.json ./badges/licenses-badge-dev.svg",
@@ -109,7 +109,6 @@
         "remark-preset-davidtheclark": "^0.12.0",
         "remark-validate-links": "^10.0.2",
         "conventional-changelog-cli": "^2.0.0",
-        "rimraf": "^3.0.2",
         "semantic-release": ">=17.2.3",
         "slugify": "^1.4.6",
         "styled-components": "^4.3.2",
