docs: updates on workflows
Added information on documentation

--- a/.env-cmdrc.json
+++ b/.env-cmdrc.json
@@ -1,11 +1,14 @@
 {
     "dev": {
-        "DEBUG": "true"
+        "DEBUG": "true",
+        "NODE_ENV": "dev"
     },
     "prod": {
-        "DEBUG": "false"
+        "DEBUG": "false",
+        "NODE_ENV": "prod"
     },
     "test": {
-        "TZ": "utc"
+        "TZ": "utc",
+        "NODE_ENV": "test"
     }
 }
