--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "d3-array": "^1.2.1",
         "d3-scale": "^2.0.0",
         "d3-shape": "^1.2.0",
+        "boxen": "^5.0.0",
         "date-fns": "^2.16.1",
         "dateformat": "^4.5.1",
         "dayjs": "^1.10.4",
