--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "format": "prettier --single-quote --write \"./src/**/*.ts\" \"./tools/**/*.ts\"",
         "format:check": "prettier --check \"./src/**/*.ts\" \"./tools/**/*.ts\"",
         "install-peers": "npm ls 2>/dev/null | grep \"UNMET PEER DEPENDENCY\" | awk '{print $NF}' | xargs npm install -D",
+        "coverage:open": "opener ./coverage/lcov-report/index.html",
         "postreinstall": "yarn setup",
         "setup": "yarn",
         "yarn:import": "del-cli --dot=true ./yarn.lock && yarn import",
@@ -90,6 +91,7 @@
         "gradient-string": "^1.2.0",
         "import-fresh": "^3.2.1",
         "is-regex": "^1.0.5",
+        "opener": "^1.5.1",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "jsdom": "16.4.0",
