--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
         "import-fresh": "^3.2.1",
         "is-regex": "^1.0.5",
         "opener": "^1.5.1",
+        "hasha": "5.2.2",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "jsdom": "16.4.0",
