--- a/package.json
+++ b/package.json
@@ -68,12 +68,13 @@
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
         "axios": "^0.21.1",
+        "boxen": "^5.0.0",
         "canvas": "^2.7.0",
+        "conventional-changelog-cli": "^2.0.0",
         "crypto": "^1.0.1",
         "d3-array": "^1.2.1",
         "d3-scale": "^2.0.0",
         "d3-shape": "^1.2.0",
-        "boxen": "^5.0.0",
         "date-fns": "^2.16.1",
         "dateformat": "^4.5.1",
         "dayjs": "^1.10.4",
@@ -89,18 +90,18 @@
         "eslint-plugin-spellcheck": "0.0.8",
         "folio": "^0.3.18",
         "gradient-string": "^1.2.0",
+        "hasha": "5.2.2",
         "import-fresh": "^3.2.1",
         "is-regex": "^1.0.5",
-        "opener": "^1.5.1",
-        "hasha": "5.2.2",
         "jest": "^26.6.3",
         "jest-circus": "^26.6.3",
         "jsdom": "16.4.0",
         "jsdom-global": "3.0.2",
         "license-badger": "^0.18.0",
-        "markdown-link-check": "^3.8.6",
         "license-checker": "^25.0.1",
+        "markdown-link-check": "^3.8.6",
         "object-hash": "^2.1.1",
+        "opener": "^1.5.1",
         "ow": "^0.13.2",
         "parse-json": "^5.0.0",
         "path-type": "^4.0.0",
@@ -112,7 +113,6 @@
         "remark-lint-ordered-list-marker-value": "^2.0.1",
         "remark-preset-davidtheclark": "^0.12.0",
         "remark-validate-links": "^10.0.2",
-        "conventional-changelog-cli": "^2.0.0",
         "semantic-release": ">=17.2.3",
         "slugify": "^1.4.6",
         "styled-components": "^4.3.2",
@@ -126,6 +126,7 @@
         "utility-types": "^3.10.0",
         "vague-time": "^2.4.2",
         "ws": "^7.4.3",
+        "xmldoc": "^1.1.2",
         "yaml": "^1.10.0",
         "yaspeller": "^7.0.0"
     },
