--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "@types/jest": "^26.0.20",
         "@types/lodash.mergewith": "^4.6.6",
         "@types/prettier": "^2.1.5",
+        "@types/minimatch": "^3.0.3",
         "@typescript-eslint/eslint-plugin": "^4.15.0",
         "@typescript-eslint/parser": "^4.15.0",
         "axios": "^0.21.1",
@@ -72,6 +73,7 @@
         "canvas": "^2.7.0",
         "conventional-changelog-cli": "^2.0.0",
         "crypto": "^1.0.1",
+        "minimatch": "^3.0.4",
         "d3-array": "^1.2.1",
         "d3-scale": "^2.0.0",
         "d3-shape": "^1.2.0",
